# db2ixf

./: .flake8  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  constraints.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: db2ixf.yml  makefile.yml  python-package-conda.yml  python-package.yml  python-publish.yml
contributing/: Makefile
dependencies/dev/: constraints.txt  requirements.txt
dependencies/release/: constraints.txt  requirements.txt
docker/: Dockerfile
docs/: index.md
docs/assets/stylesheets/: extra.css
docs/markdown/: code-reference.md  get-started.md  getting-started.md  introduction.md  welcome.md
docs/markdown/code/: collectors.md  constants.md  db2ixf.md  encoders.md  exceptions.md  helpers.md
markdown/code/collectors/: index.html
markdown/code/constants/: index.html
markdown/code/db2ixf/: index.html
markdown/code/encoders/: index.html
markdown/code/exceptions/: index.html
markdown/code/helpers/: index.html
markdown/getting-started/: index.html
markdown/introduction/: index.html
markdown/welcome/: index.html
resources/changelog/: 1.added.md  10.fixed.md  12.changed.md  15.fixed.md  16.added.md  17.added.md  18.changed.md  19.added.md  20.removed.md  23.added.md  24.changed.md  25.added.md  26.added.md  27.added.md  28.changed.md  29.fixed.md  31.added.md  32.added.md  33.added.md  37.added.md  38.fixed.md  39.fixed.md  4.changed.md  40.changed.md  41.fixed.md  43.changed.md  44.fixed.md  45.added.md  47.fixed.md  48.added.md  49.fixed.md  50.changed.md  51.changed.md  52.added.md  53.fixed.md  54.fixed.md  55.added.md  56.added.md  58.changed.md  59.added.md  (+18 more)
resources/mkdocs/: abbreviations.md
resources/recipes/conda/: meta.yaml
resources/utilities/: deep-rename.sh
search/: search_index.json
src/db2ixf/: __init__.py  cli.py  collectors.py  constants.py  encoders.py  exceptions.py  helpers.py  ibmcodecs.py  ixf.py  logger.py
tests/: __init__.py  conftest.py  test_cli.py  test_db2ixf.py  test_pkg.py
tests/functional/: __init__.py
tests/helpers/: __init__.py  data_generator.py  value_generator.py
tests/integration/: __init__.py
tests/resources/data/: sample.ixf
tests/unit/: __init__.py
